--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "json-loader": "^0.5.7",
     "node-sass": "^4.12.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-touch": "^2.0.0-beta.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
