--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "js-base64": "^2.5.1",
     "json-loader": "^0.5.7",
     "node-sass": "^4.12.0",
     "vue": "^2.5.2",
