--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "js-base64": "^2.5.1",
     "json-loader": "^0.5.7",
     "node-sass": "^4.12.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-touch": "^2.0.0-beta.4"
+    "vue-touch": "^2.0.0-beta.4",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
